<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Restaurant Guide</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="hint">Search for a location</string>
    <string name="previous">&lt;&lt; Prev</string>
    <string name="next">Next &gt;&gt;</string>
    <string name="imageView_description">Image View</string>
    <string name="name">Restaurant name</string>
    <string name="ratings"># ratings</string>
    <string name="maps">View in Google Maps</string>

</resources>